# meccanoid-gpio

./: .gitignore  CMakeLists.txt  README.md  meccanoid.cpp  version.cpp  version.h  version.h.in
cpp/: readme.txt
cpp/gpio/: blink.c
cpp/gpio/arch/arm/mach-bcm2835/: bcm2835.c  bcm2835.h
python/meccanoid/: meccabrain.py
